--- a/introduction/md.tex
+++ b/introduction/md.tex
@@ -1,7 +1,7 @@
-Because the measurable time- and length scale of biological experiments are usually larger than those of the system, the dynamics in the system can only be measured indirectly. To get a more precise insight into the concrete processes, Molecular dynamics simulation (MD) are a suitable tool.\\
+Because the measurable time- and length scale of biological experiments are usually larger than those of the system, the dynamics in the system can only be measured indirectly. To get a more precise insight into the specific processes, Molecular dynamics simulation (MD) are a suitable tool.\\
 In the following section the main concepts of MD and characteristics of the used models are outlined, with a special focus on the \martini{} force field. Nevertheless, this can only be a small survey in the scope of this thesis. Because \gromacs{} (\textit{GROningen MAchine for Chemical Simulations}) \autocites{gromacs1, gromacsManual} was used as MD engine in this thesis, the following explanations refer to \gromacs{} conventions and features. 
 \subsection{The physics of MD}
-In MD atoms are modelled as solid beads, which comprise the nucleus as well as the electron shell and follow classical equations of motion. Due to this implicit treatments of electrons Quantum mechanical (QM) effects, such as excitation or electron transfer processes, are not accessible in MD. However, the beads are parametrized by effective parameters motivated by QM or experiments \autocite[p. 127f]{greenBook}.\\
+In MD atoms are modelled as solid beads, which comprise the nucleus as well as the electron shell and follow classical equations of motion. Due to this implicit treatments of electrons, Quantum mechanical (QM) effects, such as excitation or electron transfer processes, are not accessible in MD. However, the beads are parametrized by effective parameters motivated by QM or experiments \autocite[p. 127f]{greenBook}.\\
 Newtons equation of motion can be turned into two first order differential equation
 \begin{align}
 	\label{eq:eq_of_mot_first_order}
@@ -13,7 +13,7 @@ which can be integrated numerically with e.g. Leapfrog- or Verlet integration sc
 	\vec{F}_i = - \frac{\partial V}{\partial \vec{r}_i} = - \frac{\partial}{\partial \vec{r}_i} \left(V_\text{bonded} + V_\text{non-bonded} + V_\text{external}\right)
 \end{align}
 \subsubsection{Bonded interactions}
-Bonded interactions act intramolecularly and describe chemical bonds. They can occur between two, three or four particles and refer to bond stretching, bending and torsion respectively. An illustration can be found in \autoref{md:fig_bonds}\\
+Bonded interactions act intramolecularly and describe chemical bonds. They can occur between two, three or four particles and refer to bond stretching, bending and torsion respectively. An illustration can be found in \autoref{md:fig_bonds}.\\
 \\
 Deviations of the bond length $r$ from an equilibrium distance $r_0$ results in potential energy, which is usually described by a harmonic oscillator with the force constant $k_\text{dist}$.
 \begin{align}
@@ -60,21 +60,22 @@ V_\text{Coulomb} = \frac{q_1 q_2}{4 \pi \epsilon_0 \epsilon_r r}
 \end{equation}
 where $q_1$, $q_2$ are the (partial) charges of the interacting particles, $r$ their distance and $\epsilon_r$ the relative dielectric constant \autocite[p. 65-71]{gromacsManual}.\\
 \\
-In general non-bonded interactions act between all atoms in the system, which come along with a very large computational cost.\\
+In general non-bonded interactions act between all atoms in the system, which imply a very large computational cost.\\
 The easiest solution for this problem is to use a cut-off radius $r_c$. Particles beyond this radius are not taken into account. This can be implemented very efficiently with a Verlet neighbour lists. For each particle a neighbour list is created, which contains all particles inside a second radius $r_v$ with $r_v > r_c$. This reduces the number of distance calculations a lot. The lists are updated, if the maximal displacement in the system is larger than $r_v - r_c$.  The application of a cut-off radius is suitable especially for Lennard-Jones potential as it decays very rapidly and $r_c$ can be chosen very small \autocite[p. 144]{greenBook}.\\
 Because the electrostatic potential is proportional to $1/r$ the use of a cut-off radius would lead to large jumps in the potential. That is why long range interactions have to be considered, which can be effectively done with Particle Mesh Ewald (PME) summation \autocite{pme}. Particle mesh methods in general split the electrostatic potential up into a short range and a long range part via a switching function. The short range part can be calculated with a small cut-off radius in real space. The long range part however is calculated by solving the Poisson equation of the actual charge distribution, for which a discrete grid (mesh) is used. In contrast to other particle mesh methods, this grid is transformed to Fourier space in PME with FFT techniques. Here the solution of the Poisson equation is a sum over the gridpoints. Afterwards the potential can be back transformed into real space. The use of PME requires of course periodic boundary conditions, which are described in \autoref{subsec:pbc} \autocite[p. 246-251]{greenBook}.
 \subsubsection{External forces}
-With \gromacs{} it is possible to perform pulling forces onto groups of atoms in the system. In this thesis pulling was used to bias distances between groups. For this \gromacs{} provides an option to apply an umbrella potential to two groups which yields in a force proportional to the deviation of the distance between the groups from a reference distance. The force can be applied on one or two spatial dimensions only or along a predefined vector and the reference distance can change during in time  \autocite[p. 154-159]{gromacsManual}.
-\subsection{Forcefields}
+With \gromacs{} it is possible to perform pulling forces onto groups of atoms in the system. In this thesis pulling was used to bias distances between groups. For this \gromacs{} provides an option to apply an umbrella potential to two groups which yields in a force proportional to the deviation of the distance between the groups from a reference distance. The force can be applied on one or two spatial dimensions only or along a predefined vector and the reference distance can change in time  \autocite[p. 154-159]{gromacsManual}.
+\subsection{Force fields}
 The parameters for the potentials described above are provided by force fields. There is a wide range of force fields, which are optimized for different application fields. In this thesis tow different ones, \charmm{} and \martini{}, are introduced.\\
 \\
 Force fields define specific atom types, which allow a mapping of atoms (particles in physical system) onto beads (particles used in the simulation). This mapping can take the environment of the particle (binding partners, solvents, nearby charges a.o.) into account, but can also neglect details by f.e. mapping several atoms to one bead (coarse-graining).\\
-Force fields do not only define the atom types and their properties, but also all parameters for the calculation of the potential, namely force constants, equilibrium distances a.o. Therefore forcefields define the physics of the system.
+Force fields can be distinguished in non-polarizable and polarizable force fields. Latter offer the possibility to model electronic polarization, f.e. with additional shell beads. Orientational and geometric polarisation are also accessible with non-polarizable force fields since they only rely on partial charges \autocite[p. 215ff]{greenBook}.\\  
+Force fields do not only define the atom types and their properties, but also all parameters for the calculation of the potential, namely force constants, equilibrium distances a.o. Therefore force fields define the physics of the system.
 \subsubsection{All-atom and the \charmm{} force field}
 \charmm{} \autocites{charmm36_protein}{charmm36_lipids} (C36) is part of the CHARMM (\textit{Chemistry at HARvard Macromolecular Mechanics}) MD engine and was published in 2010. In C36 all atoms are considered (all-atom force field). Parameters were mainly optimized to structural experimental data, such as nuclear magnetic resonance (NMR) or X-ray data, but also QM and semi empirical QM calculations were used (e.g. for dihedral angles of the sidechains of proteins \autocite{charmm36_protein} and partial charges of lipids \autocite{charmm36_lipids}).\\
 All simulations for optimizing have been done with a time step of 2$\si{\femto\second}$. Therefore very detailed dynamics are still included in the simulations.\\
 \\
-For all simulations the TIP3P water model \autocite{tip3p} was used, which was also used in the parametrisation of C36. Here each water molecule is modelled with three polar beads.
+For all simulations the TIP3P water model \autocite{tip3p} was used, which was also used in the parametrisation of C36. Here each water molecule is modelled with three partially charged beads.
 \subsubsection{Coarse graining and the \martini{} force field}
 \label{subsub:coarsegraining}
 The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is one of the most famous coarse graining force fields. It maps usually four heavy atoms onto a single bead (\autoref{md:martinimapping}), which implicates of course a loss of chemical information, but also an enormous reduction of computational cost. With this approach much larger time- and spatial scales are accessible for MD simulations.\\
@@ -84,7 +85,7 @@ The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is o
 \begin{figure}
 	\centering
 	\includegraphics[width=.5\textwidth]{figures/introduction/fig_martini_mapping}
-	\nicecaption{\martini{} bead mapping}{\martini{} structure of \pip{} with underlying atomistic structure. Four heavy atoms are mapped to one \martini{} bead.}
+	\nicecaption{\martini{} bead mapping}{\martini{} structure of \pip{} with underlying atomistic structure. Four heavy atoms are mapped to one \martini{} bead. The colour indicates the bead type.}
 	\label{md:martinimapping}
 \end{figure}
 %
@@ -92,17 +93,17 @@ The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is o
 %
 The parametrisation of \martini{} is mainly based on reproducing free energies, i.e. partitioning free energies and dimerization free energies of amino acid side chain analogues. For lipids also thermodynamic properties, such as area per lipid, have been considered. The parameters were optimized with a time step of 20$\si{\femto\second}$ up to 30$\si{\femto\second}$ \autocites{martini22}{martini22_lipids}.\\
 \\
-There are several side effects of coarse graining. Due to the mapping of four atoms to one bead, different atomistic structures can end up in the same Martini structures, which can be problematic e.g. for lipid tails. Also the secondary structure of proteins is affected as it becomes less stable in coarse grained models. Therefore it has to be to be constrained with elastic networks (additional bonds between backbone beads) and can not change during the simulation \autocite[p. 6812]{martini22_check}.\\
-The decrease of degrees of freedom in the system also smooths the energy surface in coarse grained models. Because smaller local irregularities in the energy surface, which would slow down the evolving of the system, are smoothed out, coarse graining speeds up the dynamics in the system. The speed up factor is not constant, but can be relatively good approximated by factor $4$ (obtained in most diffusion simulations) \autocites[p. 6810]{martini22_check}[p. 7815]{martini}.\\
+There are several side effects of coarse graining. Due to the mapping of four atoms to one bead, different atomistic structures can end up in the same Martini structures, which can be problematic e.g. for lipid tails. Also the secondary structure of proteins is affected as it becomes less stable in coarse grained models. Therefore it has to be to be constrained with elastic networks (additional bonds between backbone beads) and can not change during the simulation \autocite{martini22_check}.\\
+The decrease of degrees of freedom in the system also smooths the energy surface in coarse grained models. Because smaller local irregularities in the energy surface, which would slow down the evolving of the system, are smoothed out, coarse graining speeds up the dynamics in the system. The speed up factor is not constant, but can be relatively good approximated by factor $4$ (obtained in most diffusion simulations) \autocites{martini22_check}{martini}.\\
 Coarse graining also has an effect on the entropy and the temperature dependency of the system. In NpT ensembles the Gibbs free energy $G$ is given by
 \begin{equation}
 G = H - T S
 \end{equation}
 where $S$ is the entropy and $H$ the enthalpy. Due to a lower number of degrees of freedom in coarse grained systems the configurational entropy is reduced. Because \martini{} is tuned to free energy calculations, this implicates also a reduction of the enthalpy. The temperature dependency is therefore systematically biased \autocite{martini22_check}.\\ 
 \\
-Consistently with the four to one mapping, solvent beads in \martini{} represent four water molecules. The \martini{} water has a freezing temperature of $\approx 300\,\si{\kelvin}$ and the freezing process in irreversible. Therefore antifreeze beads were introduced, which have a larger $\sigma_\text{LJ}$ regarding interactions to normal solvent beads. By inserting these antifreeze beads the lattice conformation is disturbed and the freezing temperature reduced \autocite{martini}.\\
-In contrast to water the solvent beads are not polarizable. For this reason electrostatic screening has to be treated implicitly, which is done by an relative dielectric constant $\epsilon_r = 15$. However, this approximation fails near to polar beads resulting in an underestimation of the interaction strength between polar beads \autocite{martini22_check}. % TODO: also hydration energies? 
-To overcome implicit screening a polarizable water model was introduced to \martini{}, which is denoted as PW in the following. PW consists of three beads, two of them carrying charges. This model enables orientational polarizability and decreases the freezing point as well. Nevertheless it comes with a higher computational cost \autocite{polarizableMartini}.\\
+Consistently with the four to one mapping, solvent beads in \martini{} represent four water molecules. The \martini{} water has a freezing temperature of $\approx 300\,\si{\kelvin}$ and the freezing process is irreversible. Therefore antifreeze beads were introduced, which have a larger $\sigma_\text{LJ}$ regarding interactions to normal solvent beads. By inserting these antifreeze beads the lattice conformation is disturbed and the freezing temperature reduced \autocite{martini}.\\
+In contrast to water the solvent beads are not (orientational) polarizable. For this reason electrostatic screening has to be treated implicitly, which is done by a relative dielectric constant $\epsilon_r = 15$. However, this approximation fails near to polar beads, resulting in an underestimation of the interaction strength between polar beads \autocite{martini22_check}. % TODO: also hydration energies? 
+To overcome implicit screening, a polarizable water model was introduced to \martini{}, which is denoted as PW in the following. PW consists of three beads, two of them carrying charges. This model enables orientational polarizability and decreases the freezing point as well. Nevertheless it comes with a higher computational cost \autocite{polarizableMartini}.\\
 \\
 As reviewed by \textcite{martini22_check} \martini{} have been already used to study protein-membrane interactions as well as protein oligomerization on membranes. Also changes in tertiary structure have been addressed using \martini{}.% TODO: smth like: therefore also in this thesis?
 \subsection{External constrains}
@@ -110,14 +111,14 @@ As reviewed by \textcite{martini22_check} \martini{} have been already used to s
 \label{subsec:pbc}
 Because the simulation of an open system is not possible, boundary conditions have to be considered. Closed boundaries often lead to surface interaction artefacts and are therefore in most cases not suitable for MD simulation. That is why usually periodic boundary conditions (PBC) are used.\\
 To use PBC the shape of the simulation box has to have a space filling geometry (e.g. rectangular or rhombic dodecahedron). With periodic boundary conditions images of the simulation box are repeated in every direction. If a particle leaves the simulation box, its periodic image is coming in from the opposite. In that way the number of particles is kept constant while surface interactions are avoided.\\
-A particle interacts only with the nearest image of another particle, which means that particles near boundaries can interact with periodic images of other particles instead of the real particle. Nevertheless molecules can have long range interaction with their own periodic images, which leads to artefacts and has to be considered when choosing the size of the simulation box \autocite[p. 141f]{greenBook}.
+A particle interacts only with the nearest image of another particle, which means that particles near boundaries can interact with periodic images of other particles instead of the real particle. Nevertheless, molecules can have long range interaction with their own periodic images, which leads to artefacts and has to be considered when choosing the size of the simulation box \autocite[p. 141f]{greenBook}.
 %It is generally thought, that PBC only have small or no effects on equilibrium properties or structures of fluids, but known problems are the absence of long wavelength fluctuations (e.g. in phase transitions) or the violation of angular momentum conversation .
 \subsubsection{Thermostats}
-Integration schemes in MD are designed to conserve the energy of a system. However in real biological systems not the energy but rather temperature is kept constant. This can be achieved with thermostats. For the simulations in this thesis the Berendsen thermostat \autocite{berendsen} (BT), the Parrinello-Bussi thermostat \autocite{parinelloBussi} (PBT) and the Nosè-Hoover (NHT) thermostat \autocites{nosehooverthermo}{nosehooverthermo2} were used. BT couples the system to a heat bath by rescaling the velocities of the particles, which results in an exponential decay of temperature deviations. The coupling strength is given by the time scale, over which the energy is conducted. The rescaling involves a transfer of kinetic energy from internal degrees of freedom to translational and rotational kinetic energy of the systems COM \autocite{velRescaleSucks}. In order to prevent this transfer PBT extends BT by a stochastic term. Both BT and PBT are usefull for equilibration runs or non equilibrium MD simulations as they are stable upon large deviations \autocites{berendsen}[p. 31]{gromacsManual}.\\%TODO: better citing
-In comparism NHT extends the Hamiltonian of the system by a friction term representing a heat bath. The friction parameter follow a differential equation depending on the temperature deviation. This ansatz samples the phase space more accurately making NHT suitable for production runs. However, for large deviations NHT gets unstable \autocite[p. 32f]{gromacsManual}.\\
+Integration schemes in MD are designed to conserve the energy of a system. However in real biological systems not the energy but rather temperature is kept constant. This can be achieved with thermostats. For the simulations in this thesis the Berendsen thermostat \autocite{berendsen} (BT), the Parrinello-Bussi thermostat \autocite{parinelloBussi} (PBT) and the Nosè-Hoover (NHT) thermostat \autocites{nosehooverthermo}{nosehooverthermo2} were used. BT couples the system to a heat bath by rescaling the velocities of the particles, which results in an exponential decay of temperature deviations. The coupling strength is given by the time scale, over which the energy is conducted. The rescaling involves a transfer of kinetic energy from internal degrees of freedom to translational and rotational kinetic energy of the systems COM \autocite{velRescaleSucks}. In order to prevent this transfer PBT extends BT by a stochastic term. Both BT and PBT are useful for equilibration runs or non equilibrium MD simulations as they are stable upon large deviations \autocites{berendsen}[p. 31]{gromacsManual}.\\%TODO: better citing
+In comparison NHT extends the Hamiltonian of the system by a friction term representing a heat bath. The friction parameter follows a differential equation depending on the temperature deviation. This ansatz samples the phase space more accurately making NHT suitable for production runs. However, for large deviations NHT gets unstable \autocite[p. 32f]{gromacsManual}.\\
 \\
-Often groups are coupled to independent thermostats. This is helpful, because the heat exchange between f.e. proteins and solvents is often not correct. Therefore proteins would cool down and the solvent would heat up \autocite[p. 34]{gromacsManual}.
+Often, groups are coupled to independent thermostats. This is helpful, because the heat exchange between f.e. proteins and solvents is often not correct. Therefore proteins would cool down and the solvent would heat up \autocite[p. 34]{gromacsManual}.
 \subsubsection{Barostats}
-In biological systems often not the volume but the pressure is constant, which can be achieved in MD with different barostats. For equilibration runs the Berendsen barostat \autocite{berendsen} was used, which couples the system, analogously to the BT, to a external pressure by rescaling the positions of the particles \autocite[p. 36]{gromacsManual}. For production runs the Parinello-Rahman barostat \autocites{parinelloBarostat}{parinelloBarostat2} was used, because it samples the phase space more accurately. This barostat allows also a rotation of the position vectors. The appropriate matrix follows a differential equation depending upon the current deviation of the pressure from the external pressure. However, large deviations lead to oscillations in the box \autocite[p. 36]{gromacsManual}.\\
+In biological systems often not the volume but the pressure is constant, which can be achieved in MD with different barostats. For equilibration runs the Berendsen barostat \autocite{berendsen} was used, which couples the system, analogously to the BT, to a external pressure by rescaling the positions of the particles \autocite[p. 36]{gromacsManual}. For production runs the Parinello-Rahman barostat \autocites{parinelloBarostat}{parinelloBarostat2} was used, because it samples the phase space more accurately. This barostat allows also a rotation of the position vectors. The appropriate matrix follows a differential equation depending on the current deviation of the pressure from the external pressure. However, large deviations lead to oscillations in the box \autocite[p. 36]{gromacsManual}.\\
 \\
 \gromacs{} provides the possibility to couple the z-direction independently from the x- and y-direction, which is called semiisotropic pressure coupling. This feature is useful for membrane and pulling simulations, because the dynamics differ a lot between these axes.
